--- a/final-submission/final-submission.tex
+++ b/final-submission/final-submission.tex
@@ -182,9 +182,10 @@ We would like to thank our advisor, Prof.Dr. Farhad Mehta, for his continuous su
 %	THESIS CONTENT - APPENDICES
 %----------------------------------------------------------------------------------------
 
+
 \appendix % Cue to tell LaTeX that the following "chapters" are Appendices
+\chapter{Appendices}
 \renewcommand{\thechapter}{A}
-\addcontentsline{toc}{chapter}{Appendices}
 \include{appendices/requirements}
 \include{appendices/scenarios}
 \include{appendices/language-evaluation}
