Fix scenario reference from testing

--- a/final-submission/appendices/testing.tex
+++ b/final-submission/appendices/testing.tex
@@ -30,7 +30,7 @@ Our integration tests are split into two main environments: A minimal one as def
 
 These two, rather small nework styles will probably be the most commonly used deployments, yet cover most of the possible problems that may occur.
 
-On these two networks, the implemented scenarios as defined in Appendix \ref{scenarios} are tested (if applicable).
+On these two networks, the implemented scenarios as defined in Appendix \ref{sec:scenarios} are tested (if applicable).
 
 The integration tests are to be run on every tagged release (i.e. at least once every sprint).
 
